--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <p class="footer-head">Thank you for checking out my works!</p>
         <p>If you have any questions or inquiries, feel free to connect with me through my <a href="mailto:ldoanvie@sfu.ca" class="in-text-link">email!</a></p>
     </footer>        
-    <!-- <script src="js/vanilla-lazyload.js"></script> -->
+    <script src="js/vanilla-lazyload.js"></script>
     <script src="js/scrollTrigger.js"></script>
 </body>
 
