--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <main>
         <section id="Featured_Project">
-            <h2>Featured Projects</h2>
+            <h2>Project Analysis</h2>
             
             <!-- First Project -->        
             <div class="scroll-reveal container left active">
@@ -56,7 +56,9 @@
                     <div class="project-img project-item">
                         <figure>
 
-                            <video class="lazy js-off" width="1920" height="1080" data-src="img/Spring2021.webm" src="img/Spring2021_fallback_100.jpg" autoplay loop playsinline muted aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail" controls="controls"></video>
+                            <video class="lazy js-off" width="1920" height="1080" data-src="img/Spring2021.webm" src="img/Spring2021_fallback_100.jpg" autoplay loop playsinline muted aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail" controls="controls">
+                                <source type="video/webm" data-src="Spring2021.webm" />
+                            </video>
                             <img alt="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"class="lazy js-off" src="img/Spring2021_fallback_100.jpg"
                             data-src="img/Spring2021_fallback_400.jpg"
                             data-srcset="img/Spring2021_fallback_400.jpg 400w,
