--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
                     <!-- right side -->
                     <div class="project-img project-item">
                         <figure>
-
+                            <video width="1920" height="1080" src="img/Spring2021.webm" autoplay loop playsinline muted aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail" controls="controls">
+                                <source type="video/webm" data-src="img/Spring2021.webm" />
+                            </video>
                             <video class="lazy js-off" width="1920" height="1080" data-src="img/Spring2021.webm" src="img/Spring2021_fallback_100.jpg" autoplay loop playsinline muted aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail" controls="controls">
                                 <source type="video/webm" data-src="Spring2021.webm" />
                             </video>
