testing diff img

--- a/about.html
+++ b/about.html
@@ -36,19 +36,16 @@
     <main>
         <div class="grid about-me-2c">
             <figure class="about-img">
-                <img alt="Luke Do's Bio Photo" class="lazy js-off" src="img/Bio_100.jpg"
-                data-src="img/Bio_400.jpg"
-                data-srcset="img/Bio_400.jpg 400w,
-                             img/Bio_800.jpg 800w,
-                             img/Bio_1080.jpg 1080w"
+                <img src="https://www.educationcorner.com/images/featured-improve-test-taking.jpg
+                "
                 data-sizes="100w" width="1024">
-                <noscript>
+                <!-- <noscript>
                     <img src="img/Bio_400.jpg" alt="Luke Do's Bio Photo"
                         srcset="img/Bio_400.jpg 400w,
                                 img/Bio_800.jpg 800w,
                                 img/Bio_1080.jpg 1080w"
                         sizes="(min-width: 74rem) 50vw, 100vw" width="1080" height="1080">
-                </noscript>
+                </noscript> -->
             </figure>
             <div class="about-bio">
                 <h1>It's over Anakin, I have the highground now...</h1>
