--- a/about.html
+++ b/about.html
@@ -36,9 +36,9 @@
     <main>
         <div class="grid about-me-2c">
             <figure class="about-img">
-                <img src="https://www.educationcorner.com/images/featured-improve-test-taking.jpg
+                <img src="img/test.jpg
                 "
-                data-sizes="100w" width="1024">
+                 width="1024">
                 <!-- <noscript>
                     <img src="img/Bio_400.jpg" alt="Luke Do's Bio Photo"
                         srcset="img/Bio_400.jpg 400w,
