Refactoring file structure

--- a/about.html
+++ b/about.html
@@ -36,16 +36,19 @@
     <main>
         <div class="grid about-me-2c">
             <figure class="about-img">
-                <img src="img/test.jpg
-                "
-                 width="1024">
-                <!-- <noscript>
-                    <img src="img/Bio_400.jpg" alt="Luke Do's Bio Photo"
-                        srcset="img/Bio_400.jpg 400w,
-                                img/Bio_800.jpg 800w,
-                                img/Bio_1080.jpg 1080w"
+                <img alt="Luke Do's Bio Photo" class="lazy js-off" src="img/aboutMe/Bio_100.jpg"
+                data-src="img/aboutMe/Bio_400.jpg"
+                data-srcset="img/aboutMe/Bio_400.jpg 400w,
+                             img/aboutMe/Bio_800.jpg 800w,
+                             img/aboutMe/Bio_1080.jpg 1080w"
+                data-sizes="100w" width="1024">
+                <noscript>
+                    <img src="img/aboutMe/Bio_400.jpg" alt="Luke Do's Bio Photo"
+                        srcset="img/aboutMe/Bio_400.jpg 400w,
+                                img/aboutMe/Bio_800.jpg 800w,
+                                img/aboutMe/Bio_1080.jpg 1080w"
                         sizes="(min-width: 74rem) 50vw, 100vw" width="1080" height="1080">
-                </noscript> -->
+                </noscript>
             </figure>
             <div class="about-bio">
                 <h1>It's over Anakin, I have the highground now...</h1>
