--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <main>
         <section id="Featured_Project">
-            <h2>Featured Projects</h2>
+            <h2>Project Analysis</h2>
             
             <!-- First Project -->        
             <div class="scroll-reveal container left active">
@@ -56,18 +56,18 @@
                     <div class="project-img project-item">
                         <figure>
 
-                            <video class="lazy js-off" width="1920" height="1080" data-src="img/Spring2021.webm" src="img/Spring2021_fallback_100.jpg" autoplay loop playsinline muted aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail" controls="controls"></video>
-                            <img alt="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"class="lazy js-off" src="img/Spring2021_fallback_100.jpg"
-                            data-src="img/Spring2021_fallback_400.jpg"
-                            data-srcset="img/Spring2021_fallback_400.jpg 400w,
-                                        img/Spring2021_fallback_600.jpg 600w"
+                            <video class="lazy js-off" width="1920" height="1080" data-src="img/2021_Icebreaker/Spring2021.webm" src="img/2021_Icebreaker/Spring2021_fallback_100.jpg" autoplay loop playsinline muted aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail" controls="controls"></video>
+                            <img alt="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"class="lazy js-off" src="img/2021_Icebreaker/Spring2021_fallback_100.jpg"
+                            data-src="img/2021_Icebreaker/Spring2021_fallback_400.jpg"
+                            data-srcset="img/2021_Icebreaker/Spring2021_fallback_400.jpg 400w,
+                                        img/2021_Icebreaker/Spring2021_fallback_600.jpg 600w"
                             data-sizes="100w">
 
                             <noscript>  
-                                <video src="img/Spring2021.webm" autoplay loop playsinline muted width="1920" height="1080" aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail" controls="controls"></video> 
-                                    <img src="img/Spring2021_fallback_400.jpg" alt="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"
-                                    srcset="img/Spring2021_fallback_400.jpg 400w,
-                                            img/Spring2021_fallback_600.jpg 600w" 
+                                <video src="img/2021_Icebreaker/Spring2021.webm" autoplay loop playsinline muted width="1920" height="1080" aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail" controls="controls"></video> 
+                                    <img src="img/2021_Icebreaker/Spring2021_fallback_400.jpg" alt="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"
+                                    srcset="img/2021_Icebreaker/Spring2021_fallback_400.jpg 400w,
+                                            img/2021_Icebreaker/Spring2021_fallback_600.jpg 600w" 
                                     sizes="(min-width: 60rem) 50vw, 100vw"
                                     >
                             </noscript>
