further refactoring file structure

--- a/icebreaker.html
+++ b/icebreaker.html
@@ -12,7 +12,6 @@
     <title>SFU Anime 2021 Icebreaker | Luke Do</title>
 
     <link href="css/main_work.css" rel="stylesheet">
-    <link href="css/grids.css" rel="stylesheet">
 
 </head>
 
@@ -112,7 +111,7 @@
                     <p>The colour palette was created using <a href="https://coolors.co/" class="in-text-link" target="_blank">coolors.co</a> and was chosen for the motion graphics as the poster was heavily inspired by the colours of the spring season with the pink colour of the cherry blossom taking centre stage and is the dominant colour with other accent colours highlighting it.
                     </p>
                     <figure class="project-img figure-analysis" id="color-theme">
-                        <img alt="Icebreaker color palette" class="lazy js-off" src="img/icebreaker_palette_100.png"
+                        <img alt="Icebreaker color palette" class="lazy js-off" src="img/2021_Icebreaker/icebreaker_palette_100.png"
                         data-src="img/2021_Icebreaker/icebreaker_palette_400.png"
                         data-srcset="img/2021_Icebreaker/icebreaker_palette_400.png 400w,
                                      img/2021_Icebreaker/icebreaker_palette_600.png 600w"
@@ -175,7 +174,7 @@
                     <p>To animate Ren and Ayumi in this motion graphic, I decided to use the puppet pin tool built into After Effect as the character animation that I had in mind could be done most efficiently using the puppet pin tool. In addition, as the club could potentially reuse the animation in the future, using a feature built into After Effects would help the graphic designer from SFU Anime get up to speed quickly as they would be able to edit and make changes to the animation if request the original After Effects files.</p>
                     <figure class="project-img figure-analysis">
                         <video class="lazy js-off" width="1920" height="1080" data-src="img/2021_Icebreaker/ayumi_hand.webm" src="img/2021_Icebreaker/ayumi_hand_100.png" autoplay loop playsinline muted aria-label="After Effects puppet tool" controls="controls"></video>
-                        <img alt="After Effects puppet tool"class="lazy js-off" src="img/ayumi_hand_100.png"
+                        <img alt="After Effects puppet tool"class="lazy js-off" src="img/2021_Icebreaker/ayumi_hand_100.png"
                         data-src="img/2021_Icebreaker/ayumi_hand_400.png"
                         data-srcset="img/2021_Icebreaker/ayumi_hand_400.png 400w,
                                      img/2021_Icebreaker/ayumi_hand_800.png 800w,
@@ -221,7 +220,7 @@
                             </figure>
 
                         <figure class="figure-analysis project-img">
-                            <video class="lazy js-off" width="1920" height="1080" data-src="img/ayumi_hand_mask_on.webm" src="img/ayumi_hand_mask_on_100.png" autoplay loop playsinline muted aria-label="Character's Mask On" controls="controls"></video>
+                            <video class="lazy js-off" width="1920" height="1080" data-src="img/2021_Icebreaker/ayumi_hand_mask_on.webm" src="img/2021_Icebreaker/ayumi_hand_mask_on_100.png" autoplay loop playsinline muted aria-label="Character's Mask On" controls="controls"></video>
                             <img alt="Character's Mask On" class="lazy js-off" src="img/2021_Icebreaker/ayumi_hand_mask_on_100.png"
                             data-src="img/2021_Icebreaker/ayumi_hand_mask_on_400.png"
                             data-srcset="img/2021_Icebreaker/ayumi_hand_mask_on_400.png 400w,
@@ -269,7 +268,7 @@
 
                         <!-- Raccoon -->
                             <figure class="figure-analysis project-img">
-                                <video class="lazy js-off" width="1920" height="1080" data-src="img/raccoon.webm" src="img/2021_Icebreaker/raccoon_100.png" autoplay loop playsinline muted aria-label="Raccoon moving through using position keyframes" controls="controls"></video>
+                                <video class="lazy js-off" width="1920" height="1080" data-src="img/2021_Icebreaker/raccoon.webm" src="img/2021_Icebreaker/raccoon_100.png" autoplay loop playsinline muted aria-label="Raccoon moving through using position keyframes" controls="controls"></video>
                                 <img alt="Raccoon moving through using position keyframes" class="lazy js-off" src="img/2021_Icebreaker/raccoon_100.png"
                                 data-src="img/2021_Icebreaker/raccoon_400.png"
                                 data-srcset="img/2021_Icebreaker/raccoon_400.png 400w,
@@ -334,18 +333,18 @@
                     <div class="project-img project-item">
                         <figure>
 
-                            <video class="lazy js-off" width="1000" height="1000" data-src="img/KAFU.webm" src="img/KAFU_fallback_100.jpg" autoplay loop playsinline muted aria-label="KAFU Character Introduction Trailer Thumbnail" controls="controls"></video>
-                            <img alt="KAFU Character Introduction Trailer Thumbnail" class="lazy js-off" src="img/KAFU_fallback_100.jpg"
-                            data-src="img/KAFU_fallback_400.jpg"
+                            <video class="lazy js-off" width="1000" height="1000" data-src="img/otherProjects/KAFU.webm" src="img/otherProjects/KAFU_fallback_100.jpg" autoplay loop playsinline muted aria-label="KAFU Character Introduction Trailer Thumbnail" controls="controls"></video>
+                            <img alt="KAFU Character Introduction Trailer Thumbnail" class="lazy js-off" src="img/otherProjects/KAFU_fallback_100.jpg"
+                            data-src="img/otherProjects/KAFU_fallback_400.jpg"
                             data-srcset="img/KAFU_fallback_400.jpg 400w,
                                             img/KAFU_fallback_600.jpg 600w"
                             data-sizes="100w">
 
                             <noscript>
-                                <video src="img/KAFU.webm" autoplay loop playsinline muted aria-label="KAFU Character Introduction Trailer Thumbnail" controls="controls"></video> 
-                                <img src="img/KAFU_fallback_400.jpg" alt="KAFU Character Introduction Trailer Thumbnail"
-                                srcset="img/KAFU_fallback_400.jpg 400w,
-                                        img/KAFU_fallback_600.jpg 600w"
+                                <video src="img/otherProjects/KAFU.webm" autoplay loop playsinline muted aria-label="KAFU Character Introduction Trailer Thumbnail" controls="controls"></video> 
+                                <img src="img/otherProjects/KAFU_fallback_400.jpg" alt="KAFU Character Introduction Trailer Thumbnail"
+                                srcset="img/otherProjects/KAFU_fallback_400.jpg 400w,
+                                        img/otherProjects/KAFU_fallback_600.jpg 600w"
                                 sizes="(min-width: 60rem) 50vw, 100vw"
                                 >
                             </noscript>
@@ -357,7 +356,8 @@
 
         <footer id="contacts">
             <p class="footer-head">Thank you for checking out my works!</p>
-            <p>If you have any questions or inquiries, feel free to connect with me through my <a href="mailto:ldoanvie@sfu.ca" class="in-text-link">email!</a></p>
+            <p>If you have any questions or inquiries, feel free to connect with me through my <a href="mailto:ldoanvie@sfu.ca" class="in-text-link">Email</a>, <a href="https://www.instagram.com/lukex1a/" class="in-text-link" target="_blank">Instagram</a> or through <a href="https://www.linkedin.com/in/luke-do-284073216/" class="in-text-link" target="_blank">LinkedIn</a></p>
+            <p>Website designed and coded by me :)</p>
         </footer>
         <script src="js/vanilla-lazyload.js"></script>
         <script src="js/scrollTrigger.js"></script>
