--- a/about.html
+++ b/about.html
@@ -12,7 +12,6 @@
     <title>About Me | Luke Do</title>
 
     <link href="css/main_work.css" rel="stylesheet">
-    <link href="css/grids.css" rel="stylesheet">
 
 </head>
 
@@ -64,7 +63,8 @@
 
     <footer id="contacts">
         <p class="footer-head">Thank you for checking out my works!</p>
-        <p>If you have any questions or inquiries, feel free to connect with me through my <a href="mailto:ldoanvie@sfu.ca" class="in-text-link">email!</a></p>
+        <p>If you have any questions or inquiries, feel free to connect with me through my <a href="mailto:ldoanvie@sfu.ca" class="in-text-link">Email</a>, <a href="https://www.instagram.com/lukex1a/" class="in-text-link" target="_blank">Instagram</a> or through <a href="https://www.linkedin.com/in/luke-do-284073216/" class="in-text-link" target="_blank">LinkedIn</a></p>
+        <p>Website designed and coded by me :)</p>
     </footer>
     <script src="js/vanilla-lazyload.js"></script>
     <script src="js/scrollTrigger.js"></script>
