changed project from FHA to 343

--- a/Karamatsu.html
+++ b/Karamatsu.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&family=Noto+Sans+JP&family=Noto+Sans:wght@400;500&display=swap" rel="stylesheet">
 
-    <title>Fraser Health's 2021 Truth and Reconciliation Day | Luke Do</title>
+    <title>POV: You're a Karamatsu Girl | Luke Do</title>
 
     <link href="css/main_work.css" rel="stylesheet">
 
@@ -55,22 +55,22 @@
                     </div>  
                     <!-- right side -->
                     <div class="project-details">
-                        <p class="project-type">Motion Design - Character Animation - Story Boarding</p>
-                        <h1>SFU Anime Spring 2021 Icebreaker</h1>
-                        <p class="project-description">A Motion Graphic animation for the <a href="https://www.instagram.com/sfuanime/" class="in-text-link" target="_blank"> SFU Anime Club's</a> seasonal Club's Day event</p> 
+                        <p class="project-type">3D Modelling/Animation - Visual Effects</p>
+                        <h1>POV: You're a Karamatsu Girl</h1>
+                        <p class="project-description">A fanmade 3D Music Video made in Autodesk Maya made for a 3rd year university course</p> 
                         <!-- <p class="project-description">Personal Project</p> -->
                         <div class="grid project-roles">
                             <div class="col-1">
-                                <p class="role-type">Client</p>
-                                <p class="role-details">SFU Anime Club</p>
+                                <p class="role-type">Duration</p>
+                                <p class="role-details">2 months</p>
                             </div>
                             <div class="col-2">
                                 <p class="role-type">Type</p>
-                                <p class="role-details">Personal Project</p>
+                                <p class="role-details">Group Project</p>
                             </div>
                             <div class="col-3">
                                 <p class="role-type">Tools</p>
-                                <p class="role-details">After Effects</p>
+                                <p class="role-details">After Effects, Autodesk Maya</p>
                             </div>
                         </div>
                     </div>
