--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     </div>
                 </div>
             </div>
-            <!-- Third Project / FHA -->
+            <!-- Third Project -->
             <div class="scroll-reveal container left active">
                 <div class="grid featured-project" id="second-project">
 
@@ -137,11 +137,11 @@
                     </div>
 
                     <div class="project-details">
-                        <p class="project-type">Motion Design - Character Trailer</p>
-                        <h3>KAFU (可不)</h3>
-                        <p class="project-description">A fanmade motion graphic introducing the CeVIO AI <a href="https://kaf-u.kamitsubaki.jp/" class="in-text-link" target="_blank"> KAFU (可不) from Kamitsubaki Studio</a></p>
+                        <p class="project-type">3D Modelling/Animation - Visual Effects</p>
+                        <h3>POV: You're a Karamatsu Girl</h3>
+                        <p class="project-description">A fanmade 3D Music Video made in Autodesk Maya made for a 3rd year university course</p>
                         
-                        <a href="icebreaker.html" class="label-button">View KAFU (可不)</a>
+                        <a href="icebreaker.html" class="label-button">View POV: You're a Karamatsu Girl</a>
                     </div>
                 </div>
             </div>
