Major Changes to Kara site
Some copywriting and embedded a responsive player for the video

--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
                 </noscript>
             </figure>
             <div class="about-bio">
-                <h1>It's over Anakin, I have the highground now...</h1>
+                <h1>About me</h1>
 
                 <p>Hi, I'm Luke and I'm a Motion and Graphic Designer from Vancouver, Canada. I enjoy exploring different ways of breathing in life into what would otherwise be just a static image.</p>
 
