--- a/icebreaker.html
+++ b/icebreaker.html
@@ -328,7 +328,7 @@
                         <h3>KAFU (可不)</h3>
                         <p class="project-description">A fanmade motion graphic animation introducing <a href="https://kaf-u.kamitsubaki.jp/" class="in-text-link" target="_blank">KAFU (可不) from Kamitsubaki Studio</a></p>
                         <!-- placeholder -->
-                        <a href="icebreaker.html" class="label-button">View KAFU (可不)</a>
+                        <a href="karamatsu.html" class="label-button">View POV: You're a Karamatsu Girl</a>
                     </div>
                     <div class="project-img project-item">
                         <figure>
