--- a/Karamatsu.html
+++ b/Karamatsu.html
@@ -34,8 +34,8 @@
             <section class="project-banner">
                     <div class="grid project-banner">
                     <!-- left side -->
-                    <div class="project-img">
-                        <figure>
+                    <div class="project-img" id="iframe-container">
+                        <!-- <figure>
                             <video class="lazy js-off" width="1920" height="1080" data-src="img/2021_Icebreaker/Spring2021.webm" src="img/2021_Icebreaker/Spring2021_fallback_100.jpg" autoplay loop playsinline muted aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail" controls="controls"></video>
                             <img alt="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"class="lazy js-off" src="img/2021_Icebreaker/Spring2021_fallback_100.jpg"
                             data-src="img/2021_Icebreaker/Spring2021_fallback_400.jpg"
@@ -51,7 +51,8 @@
                                     sizes="(min-width: 60rem) 50vw, 100vw"
                                     >
                             </noscript>
-                        </figure> 
+                        </figure>  -->
+                        <iframe src="https://www.youtube.com/embed/P-Jd2lbXlTE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>  
                     <!-- right side -->
                     <div class="project-details">
@@ -61,8 +62,8 @@
                         <!-- <p class="project-description">Personal Project</p> -->
                         <div class="grid project-roles">
                             <div class="col-1">
-                                <p class="role-type">Duration</p>
-                                <p class="role-details">2 months</p>
+                                <p class="role-type">Roles</p>
+                                <p class="role-details">Modeller, Animator</p>
                             </div>
                             <div class="col-2">
                                 <p class="role-type">Type</p>
@@ -82,13 +83,14 @@
         <main>
             <section class="project-analysis" id="Background">
                 <h2>Background</h2>
-                <p>SFU Anime Spring 2021 Icebreaker Motion Graphic is a personal project that focuses on advertising the seasonal Club's Day event organized by the <a href="https://www.instagram.com/sfuanime/" class="in-text-link" target="_blank">SFU Anime Club</a> and was created using Adobe After Effects. I volunteered to take on this project because as it would be an opportunity for me to learn more about character animation and particle effects that I have never used in After Effects before.</p>
+                <p>POV: You're a Karamatsu Girl is collborative project between me and 4 other group members with a goal to create a self-insert music video for one of Yorushika's song, <a href="https://www.youtube.com/watch?v=ImbmPxv6syA" class="in-text-link" target="_blank">Ano Natsu ni Sake</a> (English: Blooming in That Summer). Our protagonist (first person POV: it's you!) one night manages to interact with their beloved anime character in a dream and they fall in love across the dimensions! Both of them try their absolute best to somehow get back and see each other again from their respective worlds.</p>
             </section>
             <section class="project-analysis" id="Process">
                 <h2>Process</h2>
-                <div class="concept">
-                    <h3>Initial Concept</h3>
-                    <p>After taking a look at <a href="https://www.instagram.com/p/CKPK4STM8En/" class="in-text-link" target="_blank">the original poster created by SFU Anime</a>, I quickly wrote and sketch down some of my ideas on how to breathe some life into the poster. The characters in the poster stood out especially to me because they present an opportunity for me to experiment with animating within After Effects. I also wanted to express the feeling of the spring season through the color palette with the sakura leaves falling from the tree.</p>
+                <div class="shotlisting">
+                    <h3>Visualizing cinematography: Shotlist & storyboarding</h3>
+                    <p>As one of my teammates have had the concept for this project in mind for a few years now, the very first step that we needed to take was to break down the song into verses to visualize what scenes/models we needed to create and animate. In this stage, I was in charge of writing the shot list and storyboarding the third chorus up until the ending of the song</p>
+                    <!-- put ss of storyboard img here -->
                     <figure class="figure-analysis project-img" id="sketch-img">
                         <img alt="Initial sketches on paper with potential ideas" class="lazy js-off" src="img/2021_Icebreaker/icebreaker_storyboard_100.jpg"
                         data-src="img/2021_Icebreaker/icebreaker_storyboard_400.jpg"
@@ -106,9 +108,10 @@
                         </noscript>
                         <figcaption class="caption-analysis">Initial sketches on paper with potential ideas</figcaption>
                     </figure>
-                    <h3>Color and Theme</h3>
+                    <!-- put ss and text about storyboard iteration here -->
+                    <h3>Modelling</h3>
                     <!-- put colors here -->
-                    <p>The colour palette was created using <a href="https://coolors.co/" class="in-text-link" target="_blank">coolors.co</a> and was chosen for the motion graphics as the poster was heavily inspired by the colours of the spring season with the pink colour of the cherry blossom taking centre stage and is the dominant colour with other accent colours highlighting it.
+                    <p> In between iterating our storyboard, each one of us started on modelling the different objects we would need to include in our animation. I was in charge of modelling the main items in our protagonist's room that they will interact with, namely the night stand and the desk setup which includes the desk itself, computer screens, a mouse and keyboard and finally the keyboard itself. 
                     </p>
                     <figure class="project-img figure-analysis" id="color-theme">
                         <img alt="Icebreaker color palette" class="lazy js-off" src="img/2021_Icebreaker/icebreaker_palette_100.png"
@@ -123,13 +126,15 @@
                             sizes="(min-width: 74rem) 50vw, 100vw"
                             >
                         </noscript>
-                        <figcaption class="caption-analysis">Color palette inspired by the cherry blossom season</figcaption>
+                        <figcaption class="caption-analysis">A render of the mouse and keyboard setup</figcaption>
                     </figure> 
                 </div>
 
-                <div class="animating-characters">
+                <div class="rendering-effects-issues">
                     <h2>Challenge</h2>
-                    <p>An obvious challenge and the main reason why I decided to take on this project is animating the two mascots <a href="#ren-ayumi" class="in-text-link">(Ren and Ayumi)</a> from SFU Anime and the raccoon munching on the piece mochi. As the poster's main focus (other than the dates and name of the event) was on the actual characters, I decided to focus my attention on animating them both.</p>
+                    <p>During the process of creating the animation, I encountered various issues regarding the different effect system and rendering process. Below are a few notable issues I came across and the solutions I have came up to address it!</p>
+                    <h3>Maya Bifrost issue</h3>
+                    <p></p>
                     <!-- insert photos of ayumi/ren  -->
                     <div class="grid project-card-2c" id="ren-ayumi">
 
