Finished 1st draft of the Kara copy writing

--- a/Karamatsu.html
+++ b/Karamatsu.html
@@ -32,26 +32,9 @@
             </nav>
 
             <section class="project-banner">
-                    <div class="grid project-banner">
+                <div class="grid project-banner">
                     <!-- left side -->
                     <div class="project-img" id="iframe-container">
-                        <!-- <figure>
-                            <video class="lazy js-off" width="1920" height="1080" data-src="img/2021_Icebreaker/Spring2021.webm" src="img/2021_Icebreaker/Spring2021_fallback_100.jpg" autoplay loop playsinline muted aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail" controls="controls"></video>
-                            <img alt="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"class="lazy js-off" src="img/2021_Icebreaker/Spring2021_fallback_100.jpg"
-                            data-src="img/2021_Icebreaker/Spring2021_fallback_400.jpg"
-                            data-srcset="img/2021_Icebreaker/Spring2021_fallback_400.jpg 400w,
-                                        img/2021_Icebreaker/Spring2021_fallback_600.jpg 600w"
-                            data-sizes="100w">
-
-                            <noscript>  
-                                <video src="img/2021_Icebreaker/Spring2021.webm" width="1920" height="1080" autoplay loop playsinline muted aria-label="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail" controls="controls"></video> 
-                                    <img src="img/2021_Icebreaker/Spring2021_fallback_400.jpg" alt="SFU Anime's Spring 2021 Icebreaker Trailer Thumbnail"
-                                    srcset="img/2021_Icebreaker/Spring2021_fallback_400.jpg 400w,
-                                            img/2021_Icebreaker/Spring2021_fallback_600.jpg 600w" 
-                                    sizes="(min-width: 60rem) 50vw, 100vw"
-                                    >
-                            </noscript>
-                        </figure>  -->
                         <iframe src="https://www.youtube.com/embed/P-Jd2lbXlTE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                     </div>  
                     <!-- right side -->
@@ -59,19 +42,24 @@
                         <p class="project-type">3D Modelling/Animation - Visual Effects</p>
                         <h1>POV: You're a Karamatsu Girl</h1>
                         <p class="project-description">A fanmade 3D Music Video made in Autodesk Maya made for a 3rd year university course</p> 
-                        <!-- <p class="project-description">Personal Project</p> -->
                         <div class="grid project-roles">
                             <div class="col-1">
-                                <p class="role-type">Roles</p>
-                                <p class="role-details">Modeller, Animator</p>
+                                <p class="role-type">The team</p>
+                                <p class="role-details">Luke Do</p>
+                                <p class="role-details">Ryan Tsang</p>
+                                <p class="role-details">Trisha Wong</p>
+                                <p class="role-details">Aakash Gupta</p>
+                                <p class="role-details">Fiona McCauley</p>
                             </div>
                             <div class="col-2">
-                                <p class="role-type">Type</p>
-                                <p class="role-details">Group Project</p>
+                                <p class="role-type">Roles</p>
+                                <p class="role-details">Animator</p>
+                                <p class="role-details">Modeller</p>
                             </div>
                             <div class="col-3">
                                 <p class="role-type">Tools</p>
-                                <p class="role-details">After Effects, Autodesk Maya</p>
+                                <p class="role-details">Autodesk Maya</p>
+                                <p class="role-details">After Effects</p>
                             </div>
                         </div>
                     </div>
@@ -83,13 +71,13 @@
         <main>
             <section class="project-analysis" id="Background">
                 <h2>Background</h2>
-                <p>POV: You're a Karamatsu Girl is collborative project between me and 4 other group members with a goal to create a self-insert music video for one of Yorushika's song, <a href="https://www.youtube.com/watch?v=ImbmPxv6syA" class="in-text-link" target="_blank">Ano Natsu ni Sake</a> (English: Blooming in That Summer). Our protagonist (first person POV: it's you!) one night manages to interact with their beloved anime character in a dream and they fall in love across the dimensions! Both of them try their absolute best to somehow get back and see each other again from their respective worlds.</p>
+                <p>POV: You're a Karamatsu Girl is collborative project between me and 4 other group members with the goal of creating a self-insert music video for one of Yorushika's song, <a href="https://www.youtube.com/watch?v=ImbmPxv6syA" class="in-text-link" target="_blank">Ano Natsu ni Sake</a> (English: Blooming in That Summer). Our protagonist (first person POV: it's you!) one night manages to interact with their beloved anime character in a dream and they fall in love across the dimensions! Both of them try their absolute best to somehow get back and see each other again from their respective worlds.</p>
             </section>
             <section class="project-analysis" id="Process">
                 <h2>Process</h2>
                 <div class="shotlisting">
                     <h3>Visualizing cinematography: Shotlist & storyboarding</h3>
-                    <p>As one of my teammates have had the concept for this project in mind for a few years now, the very first step that we needed to take was to break down the song into verses to visualize what scenes/models we needed to create and animate. In this stage, I was in charge of writing the shot list and storyboarding the third chorus up until the ending of the song</p>
+                    <p>The very first step that we needed to take was to break down the song into verses and create a storyboard to visualize what scenes/models we needed to create and animate. In this stage, I was in charge of writing the shot list and storyboarding the third chorus up until the ending of the song</p>
                     <!-- put ss of storyboard img here -->
                     <figure class="figure-analysis project-img" id="sketch-img">
                         <img alt="Initial sketches on paper with potential ideas" class="lazy js-off" src="img/2021_Icebreaker/icebreaker_storyboard_100.jpg"
@@ -134,8 +122,8 @@
                     <h2>Challenge</h2>
                     <p>During the process of creating the animation, I encountered various issues regarding the different effect system and rendering process. Below are a few notable issues I came across and the solutions I have came up to address it!</p>
                     <h3>Maya Bifrost issue</h3>
-                    <p></p>
-                    <!-- insert photos of ayumi/ren  -->
+                    <p>In our animation, I wanted to use Maya's built in effects system "Bifrost" to create realistic water particles and to simulate physics in a 3D environment. However, this decision would cause me issues later on when rendering and animating the scenes. In no particular order, here are 2 notable issues I've encountered when working with Bifrost. Firstly, when animating the scene, the Bifrost liquid would disappear from the viewports even though the bounding box for the object is still there. </p>
+                    <!-- bifrost liquid disappearing -->
                     <div class="grid project-card-2c" id="ren-ayumi">
 
                         <!-- Ren -->
@@ -176,7 +164,8 @@
                                 <figcaption class="caption-analysis">Ayumi's Character Reference Sheet by <a href="https://www.instagram.com/sfuanime/" class="in-text-link" target="_blank">SFU Anime Club</a></figcaption>
                             </figure>
                     </div>
-                    <p>To animate Ren and Ayumi in this motion graphic, I decided to use the puppet pin tool built into After Effect as the character animation that I had in mind could be done most efficiently using the puppet pin tool. In addition, as the club could potentially reuse the animation in the future, using a feature built into After Effects would help the graphic designer from SFU Anime get up to speed quickly as they would be able to edit and make changes to the animation if request the original After Effects files.</p>
+                    <p>The second and argubly most frustrating issue was the rendering issue I encountered with the Bifrost scene which was that I couldn't render my scene as a sequence in Maya as whenever I initilize the render, it would throw me an error. After researching online for a solution to this issue, I found that this error code has been an issue for sevevral years with no real fix aside from redoing everything from scratch and hope it works the next time around.</p>
+                    <!-- insert the error msg image -->
                     <figure class="project-img figure-analysis">
                         <video class="lazy js-off" width="1920" height="1080" data-src="img/2021_Icebreaker/ayumi_hand.webm" src="img/2021_Icebreaker/ayumi_hand_100.png" autoplay loop playsinline muted aria-label="After Effects puppet tool" controls="controls"></video>
                         <img alt="After Effects puppet tool"class="lazy js-off" src="img/2021_Icebreaker/ayumi_hand_100.png"
@@ -197,10 +186,12 @@
                         </noscript>
                         <figcaption class="caption-analysis">The puppet tool in action</figcaption>
                     </figure> 
-                    <!-- video/photo of after effects puppet tool animation -->
-                    <p>After animating the first mascot using the puppet pin tool, I applied the same principle to the other mascot and animated the mouths of the two characters to add more detail to the animation using a combination of the puppet pin tool and the pen tool to create a fill background so it doesn't look out of place as the area behind the moving parts are blank in the original illustration.</p>
-                    <!-- Mask -->
-
+                    <p>Despite this issue, I found that I was able to still render the scene only if I do it manually on a frame by frame basis using the Arnold render view. However, through doing this, I encountered a different issue where Maya would just randomly crash which caused a significant setback in the rendering process. Unfortunately, I couldn't solve the issue aside from brute forcing it to render through trial and error </p>
+                    
+                    <!-- Maya Particles issue -->
+                    <h3>Maya nParticles issue</h3>
+                    <p>In the outro scene of our animation, I wanted to simulate a gush of wind blowing sakura petals from outside to make the curtains move and flower petals go from the outside into the room through the use of Maya's nParticles and nCloth systems respectively. However, in the process, I ran into issues with the nParticles systems, namely it not displaying the flower petals properly but instead showed a white sphere even though we added the flower object so that Maya would be able to generate more flower petals flying into the shot. Another issue was that the nCloth effect not simulating properly during render although it was working as intended in the viewport, as it would stay at its first frame position as the scene goes on.</p>
+                    <!-- insert video or screenshot of the sphere and ncloth render staying still -->
                     <div class="grid project-card-2c">
 
                             <figure class="figure-analysis project-img">
@@ -245,7 +236,8 @@
                             <figcaption class="caption-analysis">Animation with pen tool mask on</figcaption>
                         </figure>
                     </div>
-
+                    <p>After wasting too many days watching youtube tutorials and troubleshooting the nParticles issue, I wasn't able to resolve  the issues. However, as a quick fix to the nParticles system, I decided to just animate one Sakura petal and do the rest in After Effects using the CC Particle world effect. In hindsight, I should have done this from the beginning as it took way too long for what its worth.
+                    </p>
                     <!-- both characters moving -->
                     <figure class="project-img figure-analysis">
                         <video class="lazy js-off" width="1920" height="1080" data-src="img/2021_Icebreaker/ayumi&ren_moving.webm" src="img/2021_Icebreaker/ayumi&ren_moving_100.png" autoplay loop playsinline muted aria-label="Both Characters moving through using the puppet pen tool" controls="controls"></video>
@@ -320,8 +312,7 @@
 
             <section class="project-analysis" id="Keytakeaways">
                 <h2>Reflection</h2>
-                <p>In creating this short motion graphic animation, I have gained an understanding of basic character animation in after effects using the puppet pin tool. After doing this project, I look forward to doing more character animation in after effects as it's given me the ability to breathe in life in a still 2D character. In particular, I was also able to apply this ability to animate the mascot of the SFU Anime's annual summer festival in <a href=" https://www.youtube.com/watch?v=pKl89KqK18U" class="in-text-link" target="_blank">a teaser trailer</a> I created for them!</p>
-                <p>However, looking back, I would have loved to try out more methods of animation within After Effects as the puppet pin tool that I used have limitations on how it can be used as the puppet pin tool distort the layer in order to simulate animation and might not be applicable with every situation.</p>
+                <p>As this was my first time 3D modelling and animating, I definitely feel that I could have done some parts more efficiently such as just using a transparent object to simulate the water dropplet instead of using Bifrost as it would make rendering the scene easier. However, through this project, I have learned the basic principles of 3D modelling and animation which could be transfered over a different 3D modelling program such as Blender. This project also sparked my interests in further learing 3D modelling and creating different renders (Blender Donut tutorial here I come!)</p>
             </section>
 
             <section class="more-project">
