put placeholder text to update later

--- a/Karamatsu.html
+++ b/Karamatsu.html
@@ -77,7 +77,7 @@
                 <h2>Process</h2>
                 <div class="shotlisting">
                     <h3>Visualizing cinematography: Shotlist & storyboarding</h3>
-                    <p>The very first step that we needed to take was to break down the song into verses and create a storyboard to visualize what scenes/models we needed to create and animate. In this stage, I was in charge of writing the shot list and storyboarding the third chorus up until the ending of the song</p>
+                    <p>The very first step that we needed to take was to break down the song into verses and create a storyboard to visualize what scenes/models we needed to create and animate. In this stage, I was in charge of writing the shot list and storyboarding the third chorus up until the ending of the song.</p>
                     <!-- put ss of storyboard img here -->
                     <figure class="figure-analysis project-img" id="sketch-img">
                         <img alt="Initial sketches on paper with potential ideas" class="lazy js-off" src="img/2021_Icebreaker/icebreaker_storyboard_100.jpg"
@@ -186,7 +186,7 @@
                         </noscript>
                         <figcaption class="caption-analysis">The puppet tool in action</figcaption>
                     </figure> 
-                    <p>Despite this issue, I found that I was able to still render the scene only if I do it manually on a frame by frame basis using the Arnold render view. However, through doing this, I encountered a different issue where Maya would just randomly crash which caused a significant setback in the rendering process. Unfortunately, I couldn't solve the issue aside from brute forcing it to render through trial and error </p>
+                    <p>Despite this issue, I found that I was able to still render the scene only if I do it manually on a frame by frame basis using the Arnold render view. However, through doing this, I encountered a different issue where Maya would just randomly crash which caused a significant setback in the rendering process. Unfortunately, I couldn't solve the issue aside from brute forcing it to render through trial and error.</p>
                     
                     <!-- Maya Particles issue -->
                     <h3>Maya nParticles issue</h3>
