--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
             <h2>Other Collaborative Projects</h2>
             <p class="h2-sub">projects that I have been a part of!</p>
             <!-- placeholder for stuff -->
-            <div class="scroll-reveal container left active">
+            <div class="scroll-reveal container right active">
                 <div class="grid other-project">
-                    <!-- placeholder -->
+                    <!-- BMW IAT 333 -->
                     <div class="first-other">
                         <figure>
 
@@ -173,6 +173,7 @@
                             </noscript>
                         </figure> 
                     </div>
+                    <!-- IAT 340 sound sketch 2 -->
                     <div class="second-other">
                         <figure>
 
@@ -193,6 +194,7 @@
                             </noscript>
                         </figure> 
                     </div>
+                    <!-- IAT  339 Living Soda-->
                     <div class="third-other">
                         <figure>
 
