--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <p class="project-type">Motion Design - Graphic Design - Social Media - Photography</p>
                         <h3>The SFU Summer Festival</h3>
                         <p class="project-description">A multimedia voluntary project for <a href="https://sfusummerfestival.com/" class="in-text-link" target="_blank">The SFU Summer Festival event</a></p>
-                        <a href="icebreaker.html" class="label-button">View The Summer Festival</a>
+                        <a href="summerfest.html" class="label-button">View The Summer Festival</a>
                     </div>
                     
                     <div class="project-img project-item">
