Added copy-writing for summerfest page

--- a/icebreaker.html
+++ b/icebreaker.html
@@ -170,7 +170,7 @@
                                 <figcaption class="caption-analysis">Ayumi's Character Reference Sheet by <a href="https://www.instagram.com/sfuanime/" class="in-text-link" target="_blank">SFU Anime Club</a></figcaption>
                             </figure>
                     </div>
-                    <p>To animate Ren and Ayumi in this motion graphic, I decided to use the puppet pin tool built into After Effect as the character animation that I had in mind could be done most efficiently using the puppet pin tool. In addition, as the club could potentially reuse the animation in the future, using a feature built into After Effects would help the graphic designer from SFU Anime get up to speed quickly as they would be able to edit and make changes to the animation if request the original After Effects files.</p>
+                    <p>To animate Ren and Ayumi in this motion graphic, I decided to use the puppet pin tool built into After Effect as the character animation that I had in mind could be done most efficiently using the puppet pin tool. In addition, as the club could potentially reuse the animation in the future, using a feature built into After Effects would help the graphic designer from SFU Anime get up to speed quickly as they would be able to edit and make changes to the animation if they request the original After Effects files.</p>
                     <figure class="project-img figure-analysis">
                         <video class="lazy js-off" width="1920" height="1080" data-src="img/2021_Icebreaker/ayumi_hand.webm" src="img/2021_Icebreaker/ayumi_hand_100.png" autoplay loop playsinline muted aria-label="After Effects puppet tool" controls="controls"></video>
                         <img alt="After Effects puppet tool"class="lazy js-off" src="img/2021_Icebreaker/ayumi_hand_100.png"
@@ -356,7 +356,7 @@
         <footer id="contacts">
             <p class="footer-head">Thank you for checking out my works!</p>
             <p>If you have any questions or inquiries, feel free to connect with me through my <a href="mailto:ldoanvie@sfu.ca" class="in-text-link">Email</a>, <a href="https://www.instagram.com/lukex1a/" class="in-text-link" target="_blank">Instagram</a> or through <a href="https://www.linkedin.com/in/luke-do-284073216/" class="in-text-link" target="_blank">LinkedIn</a></p>
-            <p>Website designed and coded by me :)</p>
+            <p>Website designed and coded by me :D</p>
         </footer>
         <script src="js/vanilla-lazyload.js"></script>
         <script src="js/scrollTrigger.js"></script>
