--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     </div>
 
                     <div class="project-details">
-                        <p class="project-type">3D Modelling/Animation - Visual Effects</p>
+                        <p class="project-type">3D Modelling/Animation - Award Winning</p>
                         <h3>POV: You're a Karamatsu Girl</h3>
                         <p class="project-description">A fanmade 3D Music Video made in Autodesk Maya made for a 3rd year university course</p>
                         
@@ -424,7 +424,7 @@
 
         <p class="footer-head">Thank you for checking out my works!</p>
         <p>If you have any questions or inquiries, feel free to connect with me through my <a href="mailto:ldoanvie@sfu.ca" class="in-text-link">Email</a>, <a href="https://www.instagram.com/lukex1a/" class="in-text-link" target="_blank">Instagram</a> or through <a href="https://www.linkedin.com/in/luke-do-284073216/" class="in-text-link" target="_blank">LinkedIn</a></p>
-        <p>Website designed and coded by me :)</p>
+        <p>Website designed and coded by me :D</p>
     </footer>        
     <script src="js/vanilla-lazyload.js"></script>
     <script src="js/scrollTrigger.js"></script>
