--- a/Karamatsu.html
+++ b/Karamatsu.html
@@ -38,7 +38,7 @@
                     </div>  
                     <!-- right side -->
                     <div class="project-details">
-                        <p class="project-type">3D Modelling/Animation - Visual Effects</p>
+                        <p class="project-type">3D Modelling/Animation - Award Winning</p>
                         <h1>POV: You're a Karamatsu Girl</h1>
                         <p class="project-description">A fanmade 3D Music Video made in Autodesk Maya made for a 3rd year university course</p> 
                         <div class="grid project-roles">
@@ -70,7 +70,7 @@
         <main>
             <section class="project-analysis" id="Background">
                 <h2>Background</h2>
-                <p>POV: You're a Karamatsu Girl is collborative project between me and 4 other group members with the goal of creating a self-insert music video for one of Yorushika's song, <a href="https://www.youtube.com/watch?v=ImbmPxv6syA" class="in-text-link" target="_blank">Ano Natsu ni Sake</a> (English: Blooming in That Summer). Our protagonist (first person POV: it's you!) one night manages to interact with their beloved anime character in a dream and they fall in love across the dimensions! Both of them try their absolute best to somehow get back and see each other again from their respective worlds.</p>
+                <p>POV: You're a Karamatsu Girl is collborative project between me and 4 other group members with the goal of creating a self-insert music video for one of Yorushika's song, <a href="https://www.youtube.com/watch?v=ImbmPxv6syA" class="in-text-link" target="_blank">Ano Natsu ni Sake</a> (English: Blooming in That Summer). The story revolves around our protagonist (first person POV: it's you!) one night manages to interact with their beloved anime character in a dream and they fall in love across the dimensions! Both of them try their absolute best to somehow get back and see each other again from their respective worlds.</p>
             </section>
             <section class="project-analysis" id="Process">
                 <h2>Process</h2>
@@ -121,8 +121,9 @@
                     <h2>Challenge</h2>
                     <p>During the process of creating the animation, I encountered various issues regarding the different effect system and rendering process. Below are a few notable issues I came across and the solutions I have came up to address it!</p>
                     <h3>Maya Bifrost issue</h3>
-                    <p>In our animation, I wanted to use Maya's built in effects system "Bifrost" to create realistic water particles and to simulate physics in a 3D environment. However, this decision would cause me issues later on when rendering and animating the scenes. In no particular order, here are 2 notable issues I've encountered when working with Bifrost. Firstly, when animating the scene, the Bifrost liquid would disappear from the viewports even though the bounding box for the object is still there. </p>
-                    <!-- bifrost liquid disappearing -->
+                    <p>In our animation, I wanted to use Maya's built in effects system "Bifrost" to create realistic water particles and to simulate physics in a 3D environment. However, this decision would cause me issues later on when rendering and animating the scenes. In no particular order, here are 2 notable issues I've encountered when working with Bifrost. </p>
+                    <p>Firstly, when animating the scene, the Bifrost liquid would disappear from the viewports even though the bounding box for the object is still there.</p>
+                    <!-- bifrost liquid disappearing in viewport -->
                     <div class="grid project-card-2c" id="ren-ayumi">
 
                         <!-- Ren -->
@@ -163,7 +164,7 @@
                                 <figcaption class="caption-analysis">Ayumi's Character Reference Sheet by <a href="https://www.instagram.com/sfuanime/" class="in-text-link" target="_blank">SFU Anime Club</a></figcaption>
                             </figure>
                     </div>
-                    <p>The second and argubly most frustrating issue was the rendering issue I encountered with the Bifrost scene which was that I couldn't render my scene as a sequence in Maya as whenever I initilize the render, it would throw me an error. After researching online for a solution to this issue, I found that this error code has been an issue for sevevral years with no real fix aside from redoing everything from scratch and hope it works the next time around.</p>
+                    <p>The second and argubly most frustrating issue was the rendering issue I encountered with the Bifrost scene which was that I couldn't render my scene as a sequence in Maya as whenever I initilize the render, it would throw me an error. After researching online for a solution to this issue, I found that this error code has been a known, on-going issue for sevevral years with no real fix aside from redoing everything from scratch and hope it works the next time around.</p>
                     <!-- insert the error msg image -->
                     <figure class="project-img figure-analysis">
                         <video class="lazy js-off" width="1920" height="1080" data-src="img/2021_Icebreaker/ayumi_hand.webm" src="img/2021_Icebreaker/ayumi_hand_100.png" autoplay loop playsinline muted aria-label="After Effects puppet tool" controls="controls"></video>
@@ -260,7 +261,7 @@
                     </figure>
                     
                     <h2>Final Results!</h2>
-                    <p>After working on the animation for over a month in total, our team was able to showcase our fanmade 3D music video in our class's final showcase. We received great praises from our instructors and peers, and were even awarded the "Rendering Revive" award for our creative camera movement and lighting in creating a POV 3D animation! You can watch our final animation <a href="https://youtu.be/P-Jd2lbXlTE" class="in-text-link" target="_blank">here!</a> And for more details about our project including the animatic and character design, <a href="https://iat343dreamers.wixsite.com/iat-343dreamers" class="in-text-link" target="_blank">visit our project website!</a></p>
+                    <p>After working on the animation for over a month in total, our team was able to showcase our fanmade 3D music video in our class's final showcase. We received great praises from our instructors and peers, and were even awarded the "Rendering Revive" award for our creative camera movement and lighting in creating a POV 3D animation! You can watch our final animation <a href="https://youtu.be/P-Jd2lbXlTE" class="in-text-link" target="_blank">here!</a> And for more details about our project including the initial animatic and character design, <a href="https://iat343dreamers.wixsite.com/iat-343dreamers" class="in-text-link" target="_blank">visit our project website!</a></p>
                     <!-- video/photo of after effects with sakura and raccoon -->
                     <figure class="project-img figure-analysis" id="award">
                         <img alt="Icebreaker color palette" class="lazy js-off" src="img/2021_Icebreaker/icebreaker_palette_100.png"
@@ -323,7 +324,7 @@
         <footer id="contacts">
             <p class="footer-head">Thank you for checking out my works!</p>
             <p>If you have any questions or inquiries, feel free to connect with me through my <a href="mailto:ldoanvie@sfu.ca" class="in-text-link">Email</a>, <a href="https://www.instagram.com/lukex1a/" class="in-text-link" target="_blank">Instagram</a> or through <a href="https://www.linkedin.com/in/luke-do-284073216/" class="in-text-link" target="_blank">LinkedIn</a></p>
-            <p>Website designed and coded by me :)</p>
+            <p>Website designed and coded by me :D</p>
         </footer>
         <script src="js/vanilla-lazyload.js"></script>
         <script src="js/scrollTrigger.js"></script>
